--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-body{
-    background: grey;
+html,
+body
+{
+    overflow: hidden;
+}
+
+.canvas{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
