Ajust and new more features

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 html,
 body
 {
+    font-family:  Helvetica, sans-serif;
     overflow: hidden;
+}
+
+button,
+input
+{
+    outline: none;
 }
 
 .canvas{
@@ -10,4 +17,178 @@ body
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+
+.main__container
+{
+    width: 40%;
+    height: 100%;
+    padding: 50px;
+    background: #fafafa;
+    margin: 0 auto;
+    margin-top: 100px;
+    border: 1px solid black;
+    -webkit-box-shadow: 2px 4px 31px 12px rgba(0,0,0,0.43);
+    -moz-box-shadow: 2px 4px 31px 12px rgba(0,0,0,0.43);
+    box-shadow: 2px 4px 31px 12px rgba(0,0,0,0.43);
+}
+
+.menu__settings
+{
+    position: relative;
+}
+
+.settings__btn
+{
+    background: none;
+    border: none;
+}
+
+.settings__btn:hover
+{
+    transition: .7s;
+    transform: scale(1.5)  ;
+    cursor: pointer;
+}
+
+.settings__btn:active
+{
+    transform: rotate(180deg);
+    transition: .9s;
+}
+
+.img__settings
+{
+    width: 50px;
+}
+
+.menu__settings_main
+{
+    display: none;
+    position: absolute;
+    left: 15%;
+    top: -10%;
+}
+
+.menu__settings_main button
+{
+    width: 60%;
+    height: 100%;
+    background: none;
+    text-transform: uppercase;
+    border: 1px solid #2e2e2e;
+    font-weight: 600;
+}
+
+.menu__settings_main button:nth-child(1)
+{
+    background: #fafafa;
+    color: #2e2e2e;
+}
+
+.menu__settings_main button:nth-child(2)
+{
+    background: #2e2e2e;
+    color: #fafafa;
+}
+
+.menu__settings_main button img
+{
+    width: 50%;
+}
+
+.active
+{
+    display:  flex;
+    height: 100%;
+}
+
+.animationSettings
+{
+    animation: animationSettings 5s ease-in-out ; 
+}
+
+@keyframes animationSettings
+{
+    0%{width: 0%; visibility: visible;}
+    100%{width: 100%;}
+}
+
+.menu__title
+{
+    text-align: center;
+    font-size: 2em;
+    color: #2e2e2e;
+}
+
+.menu__connection
+{
+    text-align: center;
+    font-size: 1.3em;
+    margin: 30px;
+}
+
+form
+{
+    margin: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.submit
+{
+    width: 50%;
+    height: 30px;
+    margin: 15px;
+    padding: 20px;
+    border-radius: 3px;
+    border: 1px solid #2e2e2e;
+    font-size: 1.5em;
+}
+
+.form__play
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form__play img
+{
+    width: 35px;
+    left: 40%;
+    position: absolute;
+}
+
+.form__play :nth-child(1)
+{
+    width: 100px;
+    height: 100px;
+    margin: 15px;
+    padding: 20px;
+    background: #27ae60;
+    border-radius: 50%;
+    /* border: 1px solid #2e2e2e; */
+}
+
+.form__play:hover
+{
+    transition: .7s;
+    transform: rotate(360deg);
+    cursor: pointer;
+}
+
+.transition__play:active{
+    background: #000;
+}
+
+.menu__tuto
+{
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    opacity: .8;
 }
